--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -59,8 +59,9 @@ Campaign Stages{%include 'help_button.html'%}
                     {% else %}
                     <td><input type="checkbox" id="c_cbox_{{loop.index}}" disabled="disabled"></td>
                     {% endif %}
-                    <td><input id="c_id_{{loop.index}}" value="{{campaign.campaign_id}}" readonly></td>
-                    <td><a href="{{pomspath}}/campaign_info?campaign_id={{campaign.campaign_id}}"><input id="c_name_{{loop.index}}" value="{{campaign.name}}" readonly></a></td>
+                    <td id="c_name_{{loop.index}}" style="display:none">{{campaign.name}}</td>
+                    <td id="c_id_{{loop.index}}">{{campaign.campaign_id}}</td>
+                    <td><a href="{{pomspath}}/campaign_info?campaign_id={{campaign.campaign_id}}">{{campaign.name}}</a></td>
                     <td>{{ 'Yes' if campaign.active else 'No' }}</td>
                     <td>{{ campaign.campaigns_tags | join('<br>', attribute='tag_obj.tag_name') }}</td>
                     <td>{{campaign.experimenter_holder_obj.username}}</td>
@@ -249,7 +250,7 @@ Campaign Stages{%include 'help_button.html'%}
         var max_rows = $("#c_table_max_rows").val();
         for (var i = 1; i <= max_rows; i++) {
             if ( $("#c_cbox_"+i).is(":checked") ) {
-                csv.push($("#c_id_"+i).val());
+                csv.push($("#c_id_"+i).html());
             }
         }
         if (csv.length == 0) {
@@ -291,8 +292,8 @@ Campaign Stages{%include 'help_button.html'%}
         var ids = [];
         for (var i = 1; i <= max_rows; i++) {
             if ( $("#c_cbox_"+i).is(":checked") ) {
-                names.push($("#c_name_"+i).val());
-                ids.push($("#c_id_"+i).val());
+                names.push($("#c_name_"+i).html());
+                ids.push($("#c_id_"+i).html());
             }
         }
         if (names.length == 0) {
@@ -312,8 +313,8 @@ Campaign Stages{%include 'help_button.html'%}
         var ids = [];
         for (var i = 1; i <= max_rows; i++) {
             if ( $("#c_cbox_"+i).is(":checked") ) {
-                names.push($("#c_name_"+i).val());
-                ids.push($("#c_id_"+i).val());
+                names.push($("#c_name_"+i).html());
+                ids.push($("#c_id_"+i).html());
             }
         }
         if (names.length == 0) {
@@ -332,7 +333,7 @@ Campaign Stages{%include 'help_button.html'%}
         var csv = [];
         for (var i = 1; i <= max_rows; i++) {
             if ( $("#c_tr_"+i).is(":visible") ) {
-                csv.push($("#c_id_"+i).val());
+                csv.push($("#c_id_"+i).html());
             }
         }
         location.href = "./show_campaigns?cl=" + csv.join(',');
