--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -698,11 +698,15 @@ function edit_campaign(index,clone) {
   console.log("clone = : " + clone)
   if ( typeof clone === 'undefined' )
   {
-    if ( ($("#c_authorized_"+index).val() == false) ) {
+    $("#ae_submit").prop("value","Submit");
+    if ( ($("#c_authorized_"+index).text() == "False") ) {
       $("#ae_submit").prop("disabled",true);
+    } else {
+      $("#ae_submit").prop("disabled",false);
     }
   } else {
     $("#ae_submit").prop("value","Clone");
+    $("#ae_submit").prop("disabled",false);
   }
 }
 
