bugs fixed post-release

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -1,16 +1,16 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS:Campaign {{Campaign.name}}
+POMS:Campaign Stage {{Campaign.name}} Info
 {%endblock%}
 
 
 {%block header%}
-Campaigns{%include 'help_button.html'%}
+Campaign Stage Info {%include 'help_button.html'%}
 {%endblock%}
 
 {%block subheader%}
-Campaign {{Campaign.name}}
+Campaign Stage {{Campaign.name}}
 {%endblock%}
 
 
