--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -42,7 +42,7 @@ Campaign Stages{%include 'help_button.html'%}
     }
 </style>
 <div class="ui teal button" onclick="pop_mark_inactive_modal();">Mark Campaigns Active/Inactive</div>
-<div class="ui teal button" onclick="pop_tag_untag_modal();">Tag/untag Campaigns</div>
+<div class="ui teal button" onclick="pop_tag_untag_modal();">Tag/Untag Campaigns</div>
 <div class="ui teal button" onclick="pop_launch_holder_modal();">Hold/Release Campaign Submission</div>
 <div class="ui teal button" onclick="show_stats();">Show ALL Campaigns Statistics</div>
 {% if campaigns|length == 0 %}
