--- a/webservice/templates/user_edit.html
+++ b/webservice/templates/user_edit.html
@@ -67,11 +67,11 @@ function user_action(action) {
     </div>
     <div class="field">
       <label></label>
-      <input type="text" name="first_name" placeholder="First Name" disabled="disabled">
+      <input type="text" name="first_name" placeholder="First Name" disabled>
     </div>
     <div class="field">
       <label></label>
-      <input type="text" name="last_name" placeholder="Last Name" disabled="disabled">
+      <input type="text" name="last_name" placeholder="Last Name" disabled>
     </div>
     {% endif %}
   </div>
