--- a/webservice/templates/show_tags.html
+++ b/webservice/templates/show_tags.html
@@ -28,6 +28,9 @@ Campaign Tags:
    <button>
    <a href="{{pomspath}}/campaign_deps?tag={{t.tag_name}}"><i class="sitemap icon"></i>Dependencies</a>, 
     </button>
+   <button>
+   <a href="{{pomspath}}/campaign_deps_ini?tag={{t.tag_name}}"><i class="file icon"></i>Workflow_ini file</a>, 
+    </button>
     <button>
    <a href="{{pomspath}}/campaign_time_bars?tag={{t.tag_name}}&tdays=7&tmax={{last_activity}}"><i class="tasks icon"></i>Submissions</a>
     </button>
