--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -65,6 +65,8 @@ Campaign Stages{%include 'help_button.html'%}
                 <th>Tags</th>
                 <th>Hold By</th>
                 <th>Creator</th>
+                <th>Updater</th>
+                <th>Updated</th>
                 <th data-sorter="shortDate" data-dateFormat="yyyymmdd">Created</th>
             </tr>
         </thead>
@@ -80,6 +82,8 @@ Campaign Stages{%include 'help_button.html'%}
                     <td>{{campaign.experimenter_holder_obj.username}}</td>
                     <td>{{campaign.experimenter_creator_obj.username}}</td>
                     <td>{{campaign.created.strftime('%Y-%m-%d %H:%M:%S')}}</td>
+                    <td>{{campaign.experimenter_updater_obj.username}}</td>
+                    <td>{{campaign.updated.strftime('%Y-%m-%d %H:%M:%S')}}</td>
                     <td id="c_name_{{loop.index}}" style="display:none">{{campaign.name}}</td>
                 </tr>
             {% endfor %}
