--- a/webservice/templates/launch_template_edit.html
+++ b/webservice/templates/launch_template_edit.html
@@ -143,7 +143,7 @@ Launch Templates {{ show_hint('', 'Help page') }}
     </div>
     <div class="actions">
       <div class="ui button deny red">Cancel</div>
-      <input type="submit" value="Submit" id="ae_submit" class="ui button teal" {{ 'disabled' if (data.authorized==False) }}/>
+      <input type="submit" value="Save" id="ae_submit" class="ui button teal" {{ 'disabled' if (data.authorized==False) }}/>
       <input type="submit" value="Test" name="test_template" id="ae_test" class="ui button orange" {{ 'disabled' if (data.authorized==False) }}/>
     </div>
     <input type="hidden" name="experiment" id="ae_experiment" value="{{data.curr_experiment}}">
@@ -212,7 +212,7 @@ $("#experiment").change(function() {
     $("#template_add_edit_modal").modal({}).modal('show');
     if ( typeof clone === 'undefined' )
     {
-      $("#ae_submit").prop("value","Submit");
+      $("#ae_submit").prop("value","Save");
       if ( ($("#c_authorized_"+index).text() == "False") ) {
 	$("#ae_submit").prop("disabled",true);
       } else {
